client/style.css
.pointer:hover {
    cursor: pointer !important;
    -webkit-filter: drop-shadow(10px 10px 10px rgba(250,250,250, 0.5)) !important;
    filter: drop-shadow(10px 10px 10px rgba(250,250,250, 0.5)) !important;
}
 /*Mobile */
@media only screen and (max-width: 767px) {
  .mobile.hidden,
  .tablet.only,
  .computer.only,
  .large.monitor.only,
  .widescreen.monitor.only {
    display: none !important;
  }
}
 /*Tablet / iPad Portrait */
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .mobile.only,
  .tablet.hidden,
  .computer.only,
  .large.monitor.only,
  .widescreen.monitor.only {
    display: none !important;
  }
}
 /*Computer / Desktop / iPad Landscape */
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .mobile.only,
  .tablet.only,
  .computer.hidden,
  .large.monitor.only,
  .widescreen.monitor.only {
    display: none !important;
  }
}
 /*Large Monitor */
@media only screen and (min-width: 1200px) and (max-width: 1919px) {
  .mobile.only,
  .tablet.only,
  .computer.only,
  .large.monitor.hidden,
  .widescreen.monitor.only {
    display: none !important;
  }
}
 /*Widescreen Monitor */
@media only screen and (min-width: 1920px) {
  .mobile.only,
  .tablet.only,
  .computer.only,
  .large.monitor.only,
  .widescreen.monitor.hidden {
    display: none !important;
  }
}


 .ui.image:not(.avatar2), .label, .button, img:not(.avatar2) {
    border-radius: 10px !important;
} 

